--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -42,6 +42,13 @@
 			<scope>test</scope>
 			<version>${spring.boot.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
