--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -234,12 +234,11 @@
 			<version>2.7</version>
 		</dependency>
 		<!-- spring -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<!-- <artifactId>spring-boot-parent</artifactId> -->
-			<artifactId>spring-boot</artifactId>
-			<version>1.5.4.RELEASE</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot</artifactId> -->
+<!-- 			<version>1.5.4.RELEASE</version> -->
+<!-- 		</dependency> -->
 
 
 		<dependency>
@@ -264,11 +263,11 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.3.5.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>org.glassfish.web</groupId>
-			<artifactId>javax.el</artifactId>
-			<version>2.2.4</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.glassfish.web</groupId> -->
+<!-- 			<artifactId>javax.el</artifactId> -->
+<!-- 			<version>2.2.4</version> -->
+<!-- 		</dependency> -->
 		<!-- spring shell -->
 		<dependency>
 			<groupId>org.springframework.shell</groupId>
