--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>spot-core-model-infrastructure</module>
 		<module>spot-core-base-models</module>
 		<module>spot-core</module>
+		<module>spot-core-shell</module>
 		<module>spot-spring-web-support</module>
 		<module>spot-commerce-spring-base</module>
 		<module>spot-commerce-base</module>
@@ -29,6 +30,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<log4j.version>2.8.2</log4j.version>
 		<junit.version>4.12</junit.version>
+		<spring.boot.version>2.0.0.M2</spring.boot.version>
+		<spring.version>5.0.0.RC2</spring.version>
 
 		<!-- nexus repositry -->
 		<nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
